Add Strategic Pillars Flywheel Visualization

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -151,10 +151,23 @@
                         <p>Retain interest with vibrant lifestyle content, events, and offers.</p>
                     </div>
                 </div>
-                <div class="slide-image-container animate-up delay-200" style="height: 200px;">
-                    <!-- Placeholder -->
-                    <img src="https://placehold.co/1200x400/00324D/FFFFFF?text=Strategic+Pillars+Visualization"
-                        alt="Strategy Viz">
+                <!-- Flywheel Visualization -->
+                <div class="flywheel-container animate-up delay-200">
+                    <div class="flywheel-orbit">
+                        <div class="orbit-item item-1">
+                            <span class="orbit-text">Acquire</span>
+                        </div>
+                        <div class="orbit-item item-2">
+                            <span class="orbit-text">Educate</span>
+                        </div>
+                        <div class="orbit-item item-3">
+                            <span class="orbit-text">Engage</span>
+                        </div>
+                    </div>
+                    <div class="flywheel-core">
+                        <span style="font-weight: 700; color: white; letter-spacing: 1px;">GROWTH</span>
+                        <span style="font-size: 0.8rem; color: var(--gold); margin-top: 5px;">CYCLE</span>
+                    </div>
                 </div>
             </div>
         </section>
