--- a/presentation/index.html
+++ b/presentation/index.html
@@ -476,7 +476,7 @@
                             <tr style="border-bottom: 1px solid #eee;">
                                 <td style="padding: 1rem;"><strong>Business Setup</strong></td>
                                 <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"set up business in difc", "financial license dubai", "difc company formation"</td>
+                                <td style="padding: 1rem;">"set up business", "financial license", "company formation"</td>
                             </tr>
                             <tr style="border-bottom: 1px solid #eee;">
                                 <td style="padding: 1rem;"><strong>Ecosystem</strong></td>
