Update all theme keywords to high-competition Dubai terms

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -481,22 +481,22 @@
                             <tr style="border-bottom: 1px solid #eee;">
                                 <td style="padding: 1rem;"><strong>Ecosystem</strong></td>
                                 <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"fintech hub dubai", "family office dubai", "difc innovation hub"</td>
+                                <td style="padding: 1rem;">"fintech hub dubai", "family office dubai", "innovation hub dubai"</td>
                             </tr>
                             <tr style="border-bottom: 1px solid #eee;">
                                 <td style="padding: 1rem;"><strong>Lifestyle</strong></td>
                                 <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"restaurants in difc", "events in difc", "things to do in difc"</td>
+                                <td style="padding: 1rem;">"best restaurants in dubai", "dubai art events", "things to do in dubai"</td>
                             </tr>
                              <tr style="border-bottom: 1px solid #eee;">
                                 <td style="padding: 1rem;"><strong>Properties</strong></td>
                                 <td style="padding: 1rem;"><span class="tag tag-teal">Tier 2</span></td>
-                                <td style="padding: 1rem;">"offices in difc", "rent office difc", "difc living apartments"</td>
+                                <td style="padding: 1rem;">"office space dubai", "rent commercial office dubai", "luxury apartments dubai"</td>
                             </tr>
                             <tr>
                                 <td style="padding: 1rem;"><strong>Education</strong></td>
                                 <td style="padding: 1rem;"><span class="tag tag-teal">Tier 2</span></td>
-                                <td style="padding: 1rem;">"executive education dubai", "finance courses difc"</td>
+                                <td style="padding: 1rem;">"executive education dubai", "finance courses dubai"</td>
                             </tr>
                         </tbody>
                     </table>
