Add Competitive Landscape & Gaps slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -456,6 +456,50 @@
             </div>
         </section>
 
+        <!-- New Slide: Competitive Landscape & Gaps -->
+        <section class="slide slide-light">
+            <div class="animate-up">
+                <span class="tag tag-teal">Competition</span>
+                <h2>Competitive Landscape & Gaps</h2>
+                
+                <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); gap: 2rem;">
+                    <!-- ADGM -->
+                    <div class="card" style="border-top: 5px solid #e63946;">
+                        <h3 style="font-size: 1.3rem;">Abu Dhabi Global Market (ADGM)</h3>
+                        <p style="margin-bottom: 0.5rem;"><strong>Strengths:</strong> Niche Financial Terms</p>
+                        <ul style="font-size: 0.95rem; color: #555;">
+                            <li>"Virtual assets" & "Crypto regulation"</li>
+                            <li>"Sustainable finance"</li>
+                        </ul>
+                    </div>
+                    <!-- DMCC -->
+                    <div class="card" style="border-top: 5px solid #e63946;">
+                        <h3 style="font-size: 1.3rem;">Dubai Multi Commodities Centre</h3>
+                        <p style="margin-bottom: 0.5rem;"><strong>Strengths:</strong> Volume & Setup</p>
+                        <ul style="font-size: 0.95rem; color: #555;">
+                            <li>"Low-cost business setup"</li>
+                            <li>"Commodities trading"</li>
+                            <li>"Startup-friendly freezones"</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Strategic Gap -->
+                <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white;">
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">The DIFC Opportunity</h3>
+                    <div style="display: flex; gap: 2rem; flex-wrap: wrap;">
+                        <div style="flex: 1;">
+                            <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>We Own The Authority On:</strong></p>
+                            <p style="font-size: 1.1rem; font-weight: 600;">"Family Offices", "Wealth Management", "Institutional Banking"</p>
+                        </div>
+                        <div style="flex: 1; border-left: 2px solid var(--primary-teal); padding-left: 2rem;">
+                            <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>The Keyword Gap:</strong></p>
+                            <p>Lack of <em>long-tail educational content</em> to capture early intent.</p>
+                            <p style="font-size: 0.9rem; color: var(--gold); margin-top: 0.5rem;"><em>e.g., "How to set up a family office in UAE"</em></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Slide 14: Keyword Universe & Themes -->
@@ -635,7 +679,7 @@
                     <div class="card">
                         <h3>DIFC Strengths</h3>
                         <ul style="margin-top: 1rem;">
-                            <li style="margin-bottom: 0.5rem;"><span style="color: var(--primary-teal);">✔</span> <strong>Brand Power:</strong> Unrivaled "Financial Centre" authority (DA 72).</li>
+                            <li style="margin-bottom: 0.5rem;"><span style="color: var(--primary-teal);">✔</span> <strong>Brand Power:</strong> Unrivaled "Financial Centre" authority (DA 48).</li>
                             <li style="margin-bottom: 0.5rem;"><span style="color: var(--primary-teal);">✔</span> <strong>Ecosystem:</strong> Unique sub-brands (Innovation Hub, Academy) that competitors lack.</li>
                         </ul>
                     </div>
