Add Keyword Gap Analysis slides with screenshots

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -502,7 +502,93 @@
             </div>
         </section>
 
-        <!-- Slide 14: Keyword Universe & Themes -->
+        <!-- Slide 15: Keyword Overlap -->
+        <section class="slide slide-light">
+            <div class="animate-up">
+                <span class="tag tag-teal">Market Share</span>
+                <h2>Keyword Overlap & Reach</h2>
+                <div class="card-grid" style="grid-template-columns: 1fr 1fr; align-items: center;">
+                    <div class="slide-image-container" style="height: auto; box-shadow: none; border: none; background: transparent;">
+                        <img src="assets/keyword-overlap.png" alt="Keyword Overlap Diagram" style="object-fit: contain;">
+                    </div>
+                    <div class="card">
+                        <h3>The Battleground</h3>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>DIFC (6.7K):</strong> massive unique footprint, but significant overlap with DMCC (6.4K).</li>
+                            <li><strong>The Challenge:</strong> DMCC is aggressively targeting general "Setup" terms where we overlap.</li>
+                            <li><strong>The Goal:</strong> Defend our unique Brand Authority while expanding into the shared "General Free Zone" space.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Slide 16: Missing Opportunities -->
+        <section class="slide slide-alt">
+            <div class="animate-up">
+                <span class="tag tag-gold">Growth Opportunity</span>
+                <h2>Gap 1: "Missing" High-Volume Keywords</h2>
+                <p style="margin-bottom: 2rem;">Keywords where competitors rank, but DIFC is nowhere to be found.</p>
+                
+                <div class="card-grid" style="grid-template-columns: 1.5fr 1fr;">
+                    <div class="slide-image-container" style="height: auto;">
+                        <img src="assets/missing-keywords.png" alt="Missing Keywords Table">
+                    </div>
+                    <div class="card">
+                        <h3>Critical Gaps</h3>
+                        <ul style="margin-top: 1rem;">
+                            <li style="margin-bottom: 1rem;">
+                                <strong>"Business Center" (3.6K Vol):</strong><br>
+                                <span style="font-size: 0.9rem; color: #666;">Intent: Commercial</span><br>
+                                We are missing dedicated landing pages for our business centre offerings.
+                            </li>
+                            <li style="margin-bottom: 1rem;">
+                                <strong>"Companies in UAE" (1.9K Vol):</strong><br>
+                                <span style="font-size: 0.9rem; color: #666;">Intent: Commercial</span><br>
+                                Large potential to capture broader traffic looking for reputable firms.
+                            </li>
+                            <li>
+                                <strong>"Corporate Offices Near Me" (1.9K Vol):</strong><br>
+                                <span style="font-size: 0.9rem; color: #666;">Intent: Transactional</span><br>
+                                Requires Local SEO & Google Maps optimization.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Slide 17: Weak Keywords -->
+        <section class="slide slide-light">
+            <div class="animate-up">
+                <span class="tag tag-teal">Quick Wins</span>
+                <h2>Gap 2: "Weak" Keywords (Striking Distance)</h2>
+                <p style="margin-bottom: 2rem;">Keywords where we rank deeper than page 3. These are our easiest wins.</p>
+                
+                <div class="card-grid" style="grid-template-columns: 1.5fr 1fr;">
+                    <div class="slide-image-container" style="height: auto;">
+                        <img src="assets/weak-keywords.png" alt="Weak Keywords Table">
+                    </div>
+                    <div class="card">
+                        <h3>The "Freezone" Opportunity</h3>
+                        <ul style="margin-top: 1rem;">
+                            <li style="margin-bottom: 1rem;">
+                                <strong>"Freezone" (14.8K Vol):</strong><br>
+                                <span style="color: #e63946;">DIFC Rank: 83</span> vs <span style="color: var(--primary-teal);">DMCC Rank: 15</span>.<br>
+                                We have the content, but it's not optimized for this generic term.
+                            </li>
+                            <li>
+                                <strong>"Business Setup in the UAE" (790 Vol):</strong><br>
+                                <span style="color: #e63946;">DIFC Rank: 78</span>.<br>
+                                A comprehensive "Hub Page" would vault us to Page 1.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Slide 18: Keyword Universe & Themes -->
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Strategy</span>
