Replace Keyword Universe slide with On-Page Strategy (E-E-A-T & Freshness)

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -588,48 +588,41 @@
             </div>
         </section>
 
-        <!-- Slide 18: Keyword Universe & Themes -->
+        <!-- Slide 18: On-Page Strategy -->
         <section class="slide slide-light">
             <div class="animate-up">
-                <span class="tag tag-teal">Strategy</span>
-                <h2>Keyword Universe & Themes</h2>
-                <div class="card">
-                    <table style="width: 100%; border-collapse: collapse; margin-top: 1rem;">
-                        <thead>
-                            <tr style="border-bottom: 2px solid var(--primary-teal);">
-                                <th style="text-align: left; padding: 1rem; color: var(--primary-teal);">Theme</th>
-                                <th style="text-align: left; padding: 1rem; color: var(--primary-teal);">Priority</th>
-                                <th style="text-align: left; padding: 1rem; color: var(--primary-teal);">Example Keywords</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;"><strong>Business Setup</strong></td>
-                                <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"set up business", "financial license", "company formation"</td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;"><strong>Ecosystem</strong></td>
-                                <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"fintech hub dubai", "family office dubai", "innovation hub dubai"</td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;"><strong>Lifestyle</strong></td>
-                                <td style="padding: 1rem;"><span class="tag tag-gold">Tier 1</span></td>
-                                <td style="padding: 1rem;">"best restaurants in dubai", "dubai art events", "things to do in dubai"</td>
-                            </tr>
-                             <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;"><strong>Properties</strong></td>
-                                <td style="padding: 1rem;"><span class="tag tag-teal">Tier 2</span></td>
-                                <td style="padding: 1rem;">"office space dubai", "rent commercial office dubai", "luxury apartments dubai"</td>
-                            </tr>
-                            <tr>
-                                <td style="padding: 1rem;"><strong>Education</strong></td>
-                                <td style="padding: 1rem;"><span class="tag tag-teal">Tier 2</span></td>
-                                <td style="padding: 1rem;">"executive education dubai", "finance courses dubai"</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <span class="tag tag-teal">Methodology</span>
+                <h2>On-Page Strategy: E-E-A-T & Relevance</h2>
+                <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
+                    <!-- Authority -->
+                    <div class="card">
+                        <h3>1. Topical Authority (E-E-A-T)</h3>
+                        <p><strong>Goal:</strong> Establish DIFC as the definitive source for YMYL (Your Money Your Life) content.</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>Specialized Hubs:</strong> Create deep content clusters for high-growth sectors: Web3, AI, Sustainable Finance.</li>
+                            <li><strong>Schema Markup:</strong> Use <code>Person</code> and <code>Author</code> schema to identify contributors as industry experts.</li>
+                        </ul>
+                    </div>
+                    
+                    <!-- Freshness -->
+                    <div class="card">
+                        <h3>2. Content Freshness</h3>
+                        <p><strong>Goal:</strong> Win the "Recency" signal for regulatory queries.</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>Laws & Regulations:</strong> Implement a system for rapid updates with clear "Key Takeaway" summary snippets at the top of long legal texts.</li>
+                            <li><strong>Newsroom:</strong> Frequent updates on policy changes to signal active relevance to Google.</li>
+                        </ul>
+                    </div>
+
+                    <!-- Localization -->
+                    <div class="card">
+                        <h3>3. Localized Long-Tail</h3>
+                        <p><strong>Goal:</strong> Capture high-intent, converting traffic.</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>Shift Focus:</strong> Move from generic "Fintech" to specific intent: <em>"Fintech license cost in Dubai"</em> or <em>"Venture Capital setup rules UAE"</em>.</li>
+                            <li><strong>Impact:</strong> Lower volume, but significantly higher conversion rate.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
