Replace Keyword Mapping with Strategic Content Expansion slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -664,43 +664,46 @@
             </div>
         </section>
 
-        <!-- Slide 16: Keyword to Page Mapping -->
+        <!-- Slide 20: Strategic Content Expansion -->
         <section class="slide slide-light">
             <div class="animate-up">
-                <span class="tag tag-teal">Architecture</span>
-                <h2>Keyword to Page Mapping</h2>
-                <div class="card">
-                    <table style="width: 100%; border-collapse: collapse; margin-top: 1rem;">
-                        <thead>
-                            <tr style="border-bottom: 2px solid var(--primary-teal);">
-                                <th style="text-align: left; padding: 1rem; color: var(--primary-teal); width: 40%;">User Query (Keyword)</th>
-                                <th style="text-align: center; padding: 1rem; color: var(--primary-teal); width: 10%;">➡</th>
-                                <th style="text-align: left; padding: 1rem; color: var(--primary-teal);">Target Page (URL)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;">"set up business in difc"</td>
-                                <td style="padding: 1rem; text-align: center; color: var(--gold);">➡</td>
-                                <td style="padding: 1rem;"><strong>/business/setup-guide</strong> <span style="font-size: 0.8rem; color: #666;">(New Comprehensive Guide)</span></td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;">"family office dubai"</td>
-                                <td style="padding: 1rem; text-align: center; color: var(--gold);">➡</td>
-                                <td style="padding: 1rem;"><strong>/ecosystem/family-wealth-centre</strong></td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;">"fintech hub dubai"</td>
-                                <td style="padding: 1rem; text-align: center; color: var(--gold);">➡</td>
-                                <td style="padding: 1rem;"><strong>/ecosystem/innovation-hub</strong></td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid #eee;">
-                                <td style="padding: 1rem;">"best restaurants in difc"</td>
-                                <td style="padding: 1rem; text-align: center; color: var(--gold);">➡</td>
-                                <td style="padding: 1rem;"><strong>/experience/dining</strong> <span style="font-size: 0.8rem; color: #666;">(Curated List)</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <span class="tag tag-teal">Solution</span>
+                <h2>Filling the Gaps: Strategic Content Expansion</h2>
+                <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
+                    
+                    <!-- Gap 1: Setup Volume -->
+                    <div class="card">
+                        <h3>1. The "Start a Business" Hub</h3>
+                        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;"><strong>Target:</strong> "Business Setup", "License Cost"</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>New Asset:</strong> <code>/business/setup-guide</code></li>
+                            <li><strong>The Hook:</strong> An interactive "Cost Calculator" & "Activity Picker" (Software vs. Holding Co).</li>
+                            <li><strong>Goal:</strong> Capture the high-volume traffic currently going to DMCC.</li>
+                        </ul>
+                    </div>
+
+                    <!-- Gap 2: Authority -->
+                    <div class="card">
+                        <h3>2. The "Wealth" Knowledge Hub</h3>
+                        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;"><strong>Target:</strong> "Family Office", "Crypto Regs"</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>New Asset:</strong> <code>/knowledge/wealth-series</code></li>
+                            <li><strong>The Hook:</strong> "Expert Series" interviews and clear PDF Summaries of complex regulations.</li>
+                            <li><strong>Goal:</strong> Out-educate ADGM on niche financial topics.</li>
+                        </ul>
+                    </div>
+
+                    <!-- Gap 3: Commercial -->
+                    <div class="card">
+                        <h3>3. The Business Directory</h3>
+                        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;"><strong>Target:</strong> "Companies in UAE"</p>
+                        <ul style="margin-top: 1rem;">
+                            <li><strong>New Asset:</strong> <code>/directory/companies</code></li>
+                            <li><strong>The Hook:</strong> A filterable, SEO-indexable list of 5,000+ tenants with "Verified" badges.</li>
+                            <li><strong>Goal:</strong> Rank for "Top [Industry] Companies in Dubai" queries.</li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </section>
