Update strategy: Pivot to non-branded keywords and refine Technical/CRO recommendations

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -105,7 +105,7 @@
                     <div class="card">
                         <div class="metric-big">Attract</div>
                         <h3>New Businesses</h3>
-                        <p>Rank for high-intent terms like <strong>"Set up business in DIFC"</strong>.</p>
+                        <p>Rank for high-intent terms like <strong>"Set up business in Dubai"</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big">Promote</div>
@@ -212,7 +212,7 @@
                         <h3>Mid Funnel</h3>
                         <p class="tag tag-teal">Consideration</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Set up business in DIFC"</li>
+                            <li>"Set up business in Dubai"</li>
                             <li>"Family office regulations"</li>
                         </ul>
                     </div>
@@ -343,8 +343,8 @@
                 </div>
                  <div style="margin-top: 1rem; background: white; padding: 1rem; border-radius: 8px;">
                     <ul style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; font-size: 0.9rem;">
-                        <li>• <strong>Fix:</strong> Preload hero images & use WebP.</li>
-                        <li>• <strong>Fix:</strong> Defer third-party scripts.</li>
+                        <li>• <strong>Fix:</strong> Eliminate Render-Blocking Resources (JS).</li>
+                        <li>• <strong>Fix:</strong> Optimize Server Response Time (TTFB).</li>
                     </ul>
                 </div>
             </div>
@@ -384,19 +384,19 @@
                 <h2>Improving User Retention</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
                     <div class="card">
-                        <h3>The Problem: "The Bounce"</h3>
+                        <h3>The Problem: "Low Motivation"</h3>
                         <ul style="margin-top: 1rem;">
-                            <li><span style="color: #e63946;">⚠</span> <strong>60% Drop-off:</strong> Users leave before scrolling.</li>
-                            <li><span style="color: #e63946;">⚠</span> <strong>Scanning:</strong> Users read only 20% of text.</li>
-                            <li><em>Cause:</em> Generic headlines ("Business Setup") fail to hook.</li>
+                            <li><span style="color: #e63946;">⚠</span> <strong>Friction:</strong> Users see "Enquire" and expect a sales call.</li>
+                            <li><span style="color: #e63946;">⚠</span> <strong>Generic CTA:</strong> "Enquire Now" is visible but not compelling.</li>
+                            <li><em>Insight:</em> Users want utility (costs), not a meeting.</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>The Solution: "Value First"</h3>
+                        <h3>The Solution: "Value-Led CTA"</h3>
                         <ul style="margin-top: 1rem;">
-                            <li><strong>Value-Driven H1s:</strong> "Launch Your Firm in Dubai's Leading Hub".</li>
-                            <li><strong>Outcome Imagery:</strong> Show success & lifestyle (not just buildings).</li>
-                            <li><strong>Sticky Mobile CTA:</strong> Keep "Enquire Now" always visible.</li>
+                            <li><strong>Change The Ask:</strong> Swap "Enquire" for <strong>"Get Cost Estimate"</strong>.</li>
+                            <li><strong>Reduce Friction:</strong> Simplify form to 3 essential fields.</li>
+                            <li><strong>Benefit-Driven H1s:</strong> "Launch Your Firm in Dubai's #1 Hub".</li>
                         </ul>
                     </div>
                 </div>
@@ -606,7 +606,7 @@
                     <!-- Setup Hub -->
                     <div class="card">
                         <h3>1. "Start a Business" Hub</h3>
-                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: High Volume Setup Terms</p>
+                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: "Set up business in Dubai" (Non-Branded)</p>
                         <ul style="margin-top: 0.5rem;">
                             <li><strong>Asset:</strong> <code>/business/setup-guide</code></li>
                             <li><strong>Hook:</strong> Cost Calculator & Interactive Activity Picker.</li>
@@ -728,7 +728,7 @@
                             </tr>
                              <tr style="border-bottom: 1px solid #ddd;">
                                 <td style="padding: 1rem;"><strong>Technical</strong></td>
-                                <td style="padding: 1rem;">Resolve 404s • Implement WebP • Fix Schema • Optimize Core Web Vitals</td>
+                                <td style="padding: 1rem;">Resolve 404s • Defer Unused JS • Fix Schema • Optimize TTFB</td>
                             </tr>
                              <tr>
                                 <td style="padding: 1rem;"><strong>Off-Page</strong></td>
@@ -750,7 +750,7 @@
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="card">
                         <div class="metric-big" style="color: var(--primary-teal);">Visibility</div>
-                        <p><strong>Keyword Rankings</strong><br>Top 3 for "Setup Business"</p>
+                        <p><strong>Keyword Rankings</strong><br>Top 3 for "Setup Business Dubai"</p>
                         <p><strong>Share of Voice</strong><br>vs ADGM/DMCC</p>
                     </div>
                      <div class="card">
