Refine keyword targets: Replace branded terms with growth gaps

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -105,7 +105,7 @@
                     <div class="card">
                         <div class="metric-big">Attract</div>
                         <h3>New Businesses</h3>
-                        <p>Rank for high-intent terms like <strong>"Set up business in Dubai"</strong>.</p>
+                        <p>Dominate broader terms: <strong>"Fintech license Dubai"</strong> (#5 → #1) & <strong>"Business Setup UAE"</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big">Promote</div>
@@ -204,24 +204,24 @@
                         <h3>Top of Funnel</h3>
                         <p class="tag tag-teal">Awareness</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Dubai financial centre"</li>
-                            <li>"Events in DIFC"</li>
+                            <li>"Business setup cost Dubai"</li>
+                            <li>"Best financial zones UAE"</li>
                         </ul>
                     </div>
                     <div class="card">
                         <h3>Mid Funnel</h3>
                         <p class="tag tag-teal">Consideration</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Set up business in Dubai"</li>
-                            <li>"Family office regulations"</li>
+                            <li>"Fintech license Dubai"</li>
+                            <li>"DIFC vs ADGM comparison"</li>
                         </ul>
                     </div>
                     <div class="card">
                         <h3>Bottom Funnel</h3>
                         <p class="tag tag-teal">Conversion</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Contact DIFC"</li>
-                            <li>"Register company in DIFC"</li>
+                            <li>"DIFC license cost calculator"</li>
+                            <li>"Apply for fintech license"</li>
                         </ul>
                     </div>
                 </div>
