Refine KPIs and Solutions: Focus on Fintech License growth and Optimizing existing Hub

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -605,11 +605,11 @@
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <!-- Setup Hub -->
                     <div class="card">
-                        <h3>1. "Start a Business" Hub</h3>
+                        <h3>1. Optimize "Business Hub"</h3>
                         <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: "Set up business in Dubai" (Non-Branded)</p>
                         <ul style="margin-top: 0.5rem;">
-                            <li><strong>Asset:</strong> <code>/business/setup-guide</code></li>
-                            <li><strong>Hook:</strong> Cost Calculator & Interactive Activity Picker.</li>
+                            <li><strong>Action:</strong> Refine existing <code>/business</code> section.</li>
+                            <li><strong>Add:</strong> Cost Calculator & Activity Picker (User Intent).</li>
                         </ul>
                     </div>
                      <!-- Wealth Hub -->
@@ -750,7 +750,7 @@
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="card">
                         <div class="metric-big" style="color: var(--primary-teal);">Visibility</div>
-                        <p><strong>Keyword Rankings</strong><br>Top 3 for "Setup Business Dubai"</p>
+                        <p><strong>Keyword Rankings</strong><br>#1 for "Fintech License Dubai" (Currently #5)</p>
                         <p><strong>Share of Voice</strong><br>vs ADGM/DMCC</p>
                     </div>
                      <div class="card">
