Accelerate roadmap to 9 months and limit focus to Engagement Tools

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -282,9 +282,9 @@
                     <div class="card">
                         <h3>Execution Phasing</h3>
                         <div style="margin-top: 1rem;">
-                            <p><strong>Phase 1 (Mo 0-3):</strong> <span class="tag tag-gold">Quick Wins</span><br>Technical fixes & "Business Setup" hubs.</p>
-                            <p style="margin-top: 1rem;"><strong>Phase 2 (Mo 4-9):</strong> <span class="tag tag-teal">Expansion</span><br>Lifestyle Hubs, Digital PR.</p>
-                            <p style="margin-top: 1rem;"><strong>Phase 3 (Mo 9+):</strong> <span class="tag tag-teal">Domination</span><br>Global reach & competitive wins.</p>
+                            <p><strong>Phase 1 (Mo 0-2):</strong> <span class="tag tag-gold">Quick Wins</span><br>Technical fixes & Friction Reduction.</p>
+                            <p style="margin-top: 1rem;"><strong>Phase 2 (Mo 2-5):</strong> <span class="tag tag-teal">Expansion</span><br>Engagement Tools (Calculators) & Lifestyle Hubs.</p>
+                            <p style="margin-top: 1rem;"><strong>Phase 3 (Mo 5-9):</strong> <span class="tag tag-teal">Domination</span><br>Global reach & competitive wins.</p>
                         </div>
                     </div>
                 </div>
@@ -668,12 +668,12 @@
                 <div class="timeline-container">
                     <!-- Phase 1 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 1: Foundation (Mo 0-3)</div>
+                        <div class="phase-header">Phase 1: Foundation (Mo 0-2)</div>
                         <div class="phase-content">
                             <ul>
                                 <li>Fix 25 Critical Errors</li>
+                                <li>Reduce Form Friction</li>
                                 <li>Mobile Speed Boost</li>
-                                <li>Meta Tag Overhaul</li>
                                 <li>"Quick Win" Content</li>
                             </ul>
                         </div>
@@ -681,10 +681,10 @@
                     <div class="timeline-arrow">➞</div>
                     <!-- Phase 2 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 2: Expansion (Mo 3-9)</div>
+                        <div class="phase-header">Phase 2: Expansion (Mo 2-5)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Launch Setup Hub</li>
+                                <li>Deploy Cost Calculators</li>
                                 <li>Lifestyle Sub-hubs</li>
                                 <li>Partner Badge Campaign</li>
                                 <li>Digital PR Launch</li>
@@ -694,7 +694,7 @@
                     <div class="timeline-arrow">➞</div>
                     <!-- Phase 3 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 3: Dominate (Mo 9+)</div>
+                        <div class="phase-header">Phase 3: Dominate (Mo 5-9)</div>
                         <div class="phase-content">
                             <ul>
                                 <li>Global Whitepapers</li>
